@@ -1,0 +1,3 @@
+[security]
+View = 1:Manager,Owner
+Access contents information = 0:
