@@ -1,2 +1,0 @@
-View:acquire:Manager,Owner
-Access contents information::
