@@ -1,1 +1,2 @@
+[default]
 title=Zope Pope
