@@ -1,1 +1,0 @@
-<div tal:replace="request/SERVER_NAME" />
