@@ -4,6 +4,9 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
+- FSMetadata: Remove handling of .security and .properties metadata
+  files which was supposed to have been removed in CMF 2.0 already.
+
 - SkinsTool: Added the ability to do a diff comparison between items
   found using the portal_skins "Find" ZMI tab.
   (https://bugs.launchpad.net/zope-cmf/+bug/238489)
